--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Start Docker Selenium Grid Setup
     - run: docker-compose -f "docker-compose.yml" up --scale edge=8 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean test
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
