--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,11 +29,9 @@ jobs:
         cache: maven
         
     - name: Start Docker Selenium Grid Setup
-    - run: docker-compose -f docker-compose.yml up --scale edge=8 
+    - run: docker-compose -f "docker-compose.yml" up -d --build
     
     - name: Build with Maven
       run: mvn clean test
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+   
