--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
           - SE_EVENT_BUS_PUBLISH_PORT=4442
           - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
           - SE_VNC_NO_PASSWORD=1
+          - SE_NODE_MAX_OVERRIDE_SESSIONS=true
+          - SE_NODE_MAX_SESSIONS=5
+
           
   firefox:
      image: selenium/node-firefox:4.10.0-20230607
@@ -28,6 +31,8 @@ services:
           - SE_EVENT_BUS_PUBLISH_PORT=4442
           - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
           - SE_VNC_NO_PASSWORD=1
+          - SE_NODE_MAX_OVERRIDE_SESSIONS=true
+          - SE_NODE_MAX_SESSIONS=5
           
   edge:
      image: selenium/node-edge:4.10.0-20230607
@@ -39,3 +44,5 @@ services:
           - SE_EVENT_BUS_PUBLISH_PORT=4442
           - SE_EVENT_BUS_SUBSCRIBE_PORT=4443    
           - SE_VNC_NO_PASSWORD=1 
+          - SE_NODE_MAX_OVERRIDE_SESSIONS=true
+          - SE_NODE_MAX_SESSIONS=5
