--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
         cache: maven
         
     - name: Start Docker Selenium Grid Setup
-      run: docker-compose -f "docker-compose.yml" up --scale edge=8
+      run: docker-compose -f "docker-compose.yml" up
     
     - name: Build with Maven
       run: mvn clean test
