--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,7 +11,7 @@ name: Java CI with Maven
 on:
  workflow_dispatch:
  schedule:
-    - cron: ‘15 17 * * *’
+    - cron: '20 14 * * *'
 
 jobs:
   build:
