--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,8 @@ name: Java CI with Maven
 
 on:
   schedule:
-    - cron: '43 14 * * *'
+    - cron: '00 15 * * *'
+    - cron: '05 15 * * *'
 
 jobs:
   build:
@@ -21,6 +22,27 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
+      if: github.event.schedule == '05 15 * * *'
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+        
+    - name: Start Docker Selenium Grid Setup
+      run: docker-compose -f "docker-compose.yml" up --scale edge=8 -d --build
+    
+    - name: Build with Maven
+      run: mvn clean test
+
+  Test:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      if: github.event.schedule == '00 15 * * *'
       with:
         java-version: '17'
         distribution: 'temurin'
